<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".FormLogin">

    <ImageView
        android:contentDescription="@string/desc"
        android:id="@+id/logo"
        android:layout_width="284dp"
        android:layout_height="229dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
      android:id="@+id/containerComponents"
      style="@style/ContainerComponents"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/logo"
      />
 <EditText
     android:inputType="textEmailAddress"
     android:autofillHints="email"
     android:id="@+id/edit_email"
     style= "@style/Edit_Text"
     android:hint="@string/email"
     android:drawableEnd="@drawable/ic_email"
     app:layout_constraintStart_toStartOf="@+id/containerComponents"
     app:layout_constraintEnd_toEndOf="@+id/containerComponents"
     app:layout_constraintTop_toTopOf="@+id/containerComponents" />

    <EditText
        android:inputType="numberPassword"
        android:autofillHints="senha"
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:hint="@string/senha"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button"
        android:text="@string/entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:indeterminateTint="@color/white"
        android:visibility="invisible"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents" />

    <TextView
        android:id="@+id/text_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/text_cadastro"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar" />
</androidx.constraintlayout.widget.ConstraintLayout>
